--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 @font-face {
-    font-family: "Hebbo";
-    src: url("./fonts/Heebo-Light.woff2") format("woff2");
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hebbo";
+  src: url("./fonts/Heebo-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Hebbo";
-    src: url("./fonts/Heebo-Bold.woff2") format("woff2");
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hebbo";
+  src: url("./fonts/Heebo-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Hebbo";
-    src: url("./fonts/Yantramanav-Bold.woff2") format("woff2");
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hebbo";
+  src: url("./fonts/Yantramanav-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
 
 /**
@@ -52,8 +52,7 @@ body,
   Убираем внешние отступы вертикали нужным тегам,
   у которых есть атрибут class
  */
-:where(
-  h1,
+:where(h1,
   h2,
   h3,
   h4,
@@ -62,8 +61,7 @@ body,
   p,
   ul,
   ol,
-  dl
-):where([class]) {
+  dl):where([class]) {
   margin-block: 0;
 }
 
@@ -187,10 +185,8 @@ button {
   (за исключением тех, у которых уже указан
   атрибут fill со значением 'none' или начинается с 'url')
  */
-:where([fill]:not(
-  [fill="none"],
-  [fill^="url"]
-)) {
+:where([fill]:not([fill="none"],
+    [fill^="url"])) {
   fill: currentColor;
 }
 
@@ -199,10 +195,8 @@ button {
   (за исключением тех, у которых уже указан
   атрибут stroke со значением 'none')
  */
-:where([stroke]:not(
-  [stroke="none"],
-  [stroke^="url"]
-)) {
+:where([stroke]:not([stroke="none"],
+    [stroke^="url"])) {
   stroke: currentColor;
 }
 
@@ -226,6 +220,7 @@ svg * {
   которые предпочитают их не использовать
  */
 @media (prefers-reduced-motion: reduce) {
+
   *,
   ::before,
   ::after {
@@ -240,13 +235,14 @@ svg * {
   --color-dark: #000000;
   --color-light: #ffffff;
   --color-dark-gray: #404040;
+  --color-dark-alternate: #131619;
   --color-light-gray: #C4C4C4;
-    
+
   --border-radius: 30px;
   --border: 1px solid var(--color-light);
 
   --font-family-base: "Hebbo", sans-serif;
-  --font-family-accent: "Yantramanav" , sans-serif;
+  --font-family-accent: "Yantramanav", sans-serif;
 
   --input-height: 54px;
 
@@ -254,6 +250,8 @@ svg * {
   --container-padding-x: 15px;
 
   --transition-duration: 0.2s;
+
+  --header-hight: 90px;
 }
 
 body {
@@ -291,7 +289,25 @@ a:hover {
   color: var(--color-light-gray);
 }
 
-h1, h2, h3, h4, h5, h6 {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -320,8 +336,10 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: var(--header-hight);
   column-gap: 20px;
   padding-inline: 32px;
+  background-color: var(--color-dark-alternate);
 }
 
 .header-menu-list {
@@ -334,7 +352,7 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-flex;
   align-items: center;
   column-gap: 7px;
-  height: 90px;
+  height: var(--header-hight);
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
@@ -345,7 +363,7 @@ h1, h2, h3, h4, h5, h6 {
 .header-menu-link.is-current::after {
   content: "";
   width: 5px;
-  height: 5px;
+  aspect-ratio: 1;
   background-color: currentColor;
   border-radius: 50%;
 }
@@ -363,14 +381,14 @@ h1, h2, h3, h4, h5, h6 {
   padding-left: 8px;
   color: var(--color-light);
   width: 40px;
-  height: 40px;
+  aspect-ratio: 1;
   background-color: transparent;
   border: var(--border);
   border-radius: var(--border-radius);
 }
 
 .header-burger-button:hover {
-  color:var(--color-light-gray);
+  color: var(--color-light-gray);
   border-color: currentColor;
 }
 
@@ -397,7 +415,61 @@ h1, h2, h3, h4, h5, h6 {
   .header-menu-link {
     height: 50px;
   }
+
+  .banner {
+    row-gap: 10px;
+  }
+
 }
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  min-height: calc(100vh - var(--header-hight));
+  color: var(--color-light);
+  background-color: var(--color-dark-alternate);
+  padding: 36px 70px;
+}
+
+
+.header,
+.banner {
+  padding-inline: 15px;
+}
+
+.banner-body {
+  text-transform: uppercase;
+}
+
+.banner-info {
+  display: flex;
+  align-items: end;
+  font-size: clamp(16px, 1.56vw, 30px);
+  line-height: 1.27;
+  font-weight: 700;
+}
+
+.banner-info::before {
+  content: "";
+  width: clamp(60px, 10.1vw, 194px);
+  aspect-ratio: 1;
+  margin-right: 30px;
+  background: url("./icons/bold-arrow-down-right.svg") center/contain no-repeat;
+}
+
+.banner-title {
+  font-size: min(18.75vw, 360px);
+  line-height: 1;
+
+}
+
+.banner-pagination-list {
+  display: flex;
+  justify-content: center;
+  column-gap: 14pxf;
+}
+
 
 @media (max-width: 767px) {
 
@@ -419,5 +491,13 @@ h1, h2, h3, h4, h5, h6 {
 
   .header-actions {
     column-gap: 15px;
+  }
+
+  .banner-info {
+    margin-bottom: 5px;
+  }
+
+  .banner-info::before {
+    margin-right: 10px;
   }
 }
