--- a/style.css
+++ b/style.css
@@ -173,6 +173,14 @@ label {
   cursor: pointer;
 }
 
+p {
+  margin-block: 0;
+}
+
+p:not(:last-child) {
+  margin-bottom: 24px;
+}
+
 /**
   Убирает серую подсветку при тапе на мобильных устройствах (iOS/Android)
  */
@@ -302,6 +310,40 @@ a:hover {
   overflow: hidden;
 }
 
+.title-medium {
+  font-size: clamp(20px, 2.08vw, 40px);
+  line-height: 1.3;
+  color: var(--color-light);
+}
+
+.backdrop-title {
+  position: relative;
+  z-index: 2;
+}
+
+.backdrop-title::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: calc(100% + 8px);
+  width: 26px;
+  aspect-ratio: 1;
+  background: url(./icons/plus.svg) center/contain no-repeat;
+}
+
+.backdrop-title::after {
+  content: attr(data-title);
+  color: transparent;
+  position: absolute;
+  z-index: -1;
+  top: -0.45em;
+  left: -0.6em;
+  font-family: var(--font-family-accent);
+  font-size: 2.8em;
+  -webkit-text-stroke: 1px var(--color-light-gray);
+  text-stroke: 1px var(--color-light-gray);
+}
+
 h1,
 h2,
 h3,
@@ -324,12 +366,38 @@ h6 {
   white-space: nowrap;
   background-color: var(--color-light);
   bottom: none;
+  text-decoration: none;
   border-radius: var(--border-radius);
 }
 
 .button:hover {
   background-color: var(--color-light-gray);
 
+}
+.button.transparent {
+  position: relative;
+  height: var(--input-height);
+  padding-left: 31px;
+  padding-right: 80px;
+  background-color: transparent;
+  border: var(--border);
+}
+
+.button.transparent::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  transform: rotate(270deg);
+  height: 100%;
+  aspect-ratio: 1;
+  background: url("./icons/arrow-top-right.svg") center/70% no-repeat;
+  border: var(--border);
+  border-radius: 50%
+}
+
+.button.transparent:hover {
+  color: var(--color-dark);
+  background-color: var(--color-light-gray);
 }
 
 .header {
@@ -399,28 +467,6 @@ h6 {
   box-shadow: 16px 0 0 currentColor;
 }
 
-@media (max-width: 1024px) {
-  .header {
-    flex-wrap: wrap;
-    row-gap: 10px;
-    padding-top: 20px;
-    padding-inline: 15px;
-  }
-
-  .header-menu {
-    order: 1;
-    flex-basis: 100%;
-  }
-
-  .header-menu-link {
-    height: 50px;
-  }
-
-  .banner {
-    row-gap: 10px;
-  }
-
-}
 
 .banner {
   display: flex;
@@ -470,6 +516,79 @@ h6 {
   column-gap: 14pxf;
 }
 
+.motivation-item:nth-child(even) {
+  background-color: var(--color-dark-alternate);
+}
+
+.motivation-item:nth-child(even) .motivation-card{
+  flex-direction: row-reverse;
+}
+
+.motivation-card {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  column-gap: clamp(30px, 10.42vw, 200px);
+}
+
+.motivation-card-image {
+  margin-block: -60px;
+}
+
+.motivation-card-body {
+  padding-left: 35px;
+}
+
+.motivation-card-discription {
+  max-width: 400px;
+}
+
+.motivation-card-title:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.motivation-card-discription:not(:last-child) {
+  margin-bottom: 37px;
+}
+
+@media (max-width: 1919px) {
+  .motivation-card-image {
+    margin-block: -20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header {
+    flex-wrap: wrap;
+    row-gap: 10px;
+    padding-top: 20px;
+    padding-inline: 15px;
+  }
+
+  .header-menu {
+    order: 1;
+    flex-basis: 100%;
+  }
+
+  .header-menu-link {
+    height: 50px;
+  }
+
+  .banner {
+    row-gap: 10px;
+  }
+
+  .motivation-card {
+    padding-block: 50px;
+  }
+
+  .motivation-card-image {
+    max-width: 30%;
+    height: auto;
+    margin-block: 0;
+  }
+
+}
 
 @media (max-width: 767px) {
 
@@ -499,5 +618,23 @@ h6 {
 
   .banner-info::before {
     margin-right: 10px;
+  }
+
+  .motivation-card 
+  .motivation-item:nth-child(even) .motivation-card{
+    flex-direction: column-reverse;
+  }
+
+  .motivation-card-image {
+    max-width: 60%;
+  }
+
+  .motivation-card  {
+    padding-block: 30px;
+    row-gap: 30px;
+  }
+
+  .motivation-card-discription:not(:last-child) {
+    margin-bottom: 20px;
   }
 }
